--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body, html {
 }
 
 #centering {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  position: relative;
+  top: 45vh;
+  left: 30vw;
+  min-height: 10vh;
+  min-width: 40vw;
   text-transform: uppercase;
   padding: .4vh;
   font-weight: 1;
@@ -31,5 +31,64 @@ body, html {
   outline: none;
   -webkit-box-shadow: 2vh 2vh #00000057;
           box-shadow: 2vh 2vh #00000057;
+}
+
+#centering:hover {
+  -webkit-animation: wiggle .8s;
+          animation: wiggle .8s;
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  20% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  40% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  60% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  80% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  20% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  40% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  60% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  80% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
 }
 /*# sourceMappingURL=style.css.map */
